[package]
name = "radius2"
description = "a fast symbolic execution framework using r2"
version = "1.0.4"
authors = ["aemmitt-ns <aemmitt@nowsecure.com>"]
license = "MIT"
edition = "2018"
keywords = ["symbolic", "execution"]
repository = "https://github.com/aemmitt-ns/radius"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2pipe = "0.5.0"
serde_json = "1.0.59"
serde = "1.0.117"
boolector = { version = "0.4.2", features = ["vendor-lgl"] }
ahash = "0.7.4"
clap = "2.33.3"