[package]
name = "radius2"
description = "a fast symbolic execution framework using r2"
version = "1.0.14"
authors = ["aemmitt-ns <aemmitt@nowsecure.com>"]
license = "MIT"
edition = "2018"
keywords = ["symbolic", "execution"]
repository = "https://github.com/aemmitt-ns/radius"
readme = "README.md"

[dependencies]
r2pipe = "0.6.0"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
boolector = { version = "0.4.2", features = ["vendor-lgl"] }
clap = "2.33.3"
rand = "0.8.4"