[package]
name = "radius2"
description = "a fast symbolic execution framework using r2"
version = "1.0.28"
authors = ["aemmitt-ns <aemmitt@nowsecure.com>"]
license = "MIT"
edition = "2018"
keywords = ["symbolic", "execution"]
repository = "https://github.com/aemmitt-ns/radius"
readme = "README.md"

[dependencies]
r2pipe = { path = "../../r2pipe.rs/" }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
boolector = "0.4.3"
clap = "2.33.3"
rand = "0.8.4"
colored = "2.0.0"

[features]
default = ["boolector/vendor-lgl"]

[package.metadata.docs.rs]
no-default-features = true
